--- a/public/index.html
+++ b/public/index.html
@@ -11,3 +11,23 @@
 	<script src="index.js"></script>
   </body>
 </html>
+
+<html lang="en">
+  <head>
+    <!-- head content skipped -->
+  </head>
+  <body>
+
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>
+  
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
+
+
+<iframe src="https://www.google.com/maps/embed/v1/place?q=Central+Florida,+FL,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
