added to data.js

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
 	<script src="index.js"></script>
+  <div class="h-screen flex items-center justify-center">
+
+  <h1>Rachel LaQuea Inc.</h1>
+
+</div>
   </body>
 </html>
 
