added launch.json file, troubleshooting app file and components not rendering on page

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 	<script src="index.js"></script>
   <div id="root"></div>
   <script src="/static/js/bundle.js"></script>
+  <script src="/src/App.js"></script>
+  <script src="/src/data.js"></script>
+  <script src="/src/index.js"></script>
 </body>
   <h1>Rachel LaQuea Inc.</h1>
   <div class="border"></div>
