--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<script src="index.js"></script>
+	<script src="../src/index.js"></script>
   <div id="root"></div>
-  <script src="/static/js/bundle.js"></script>
   <script src="/src/App.js"></script>
   <script src="/src/data.js"></script>
   <script src="/src/index.js"></script>
