added tailwind config file, and postcss config file, testing styling on rachel laquea inc heading tag to troubleshoot styling not being applied

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   <script src="/src/data.js"></script>
   <script src="/src/index.js"></script>
 </body>
-  <h1>Rachel LaQuea Inc.</h1>
-  <div class="border"></div>
+<h1 class="bg-blue-500 text-white">Rachel LaQuea Inc.</h1>
+<div class="border"></div>
 
 </div>
   </body>
