--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
 <div class="border"></div>
 
 </div>
+
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text" name="name" />
+    <input type="email" name="email" />
+    <textarea name="message"></textarea>
+  </form>	
   </body>
 </html>
 
