--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,6 @@
 <div class="border"></div>
 
 </div>
-
   <form name="contact" netlify netlify-honeypot="bot-field" hidden>
     <input type="text" name="name" />
     <input type="email" name="email" />
@@ -29,17 +28,8 @@
 
 <html lang="en">
   
-  <body>
-
-  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-    <input type="text" name="name" />
-    <input type="email" name="email" />
-    <textarea name="message"></textarea>
-  </form>
-  
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+    <div id="root"></div
 </html>
 
 
