--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <body>
 	<h1 class="bg-blue-500 text-white">Rachel LaQuea Inc.</h1>
 	<div class="border"></div>
-	<div id="root"></div
+	<div id="root"></div>
 	<script src="../src/index.js"></script>
   <script src="/src/App.js"></script>
   <script src="/src/data.js"></script>
