--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <input type="email" name="email" />
     <textarea name="message"></textarea>
   </form>	
-	
+<noscript>You need to enable JavaScript to run this app.</noscript>
   <script src="/src/App.js"></script>
   <script src="/src/data.js"></script>
   <script src="/src/index.js"></script>
