--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rachel LaQuea Inc.</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-	<h1 class="bg-blue-500 text-white">Rachel LaQuea Inc.</h1>
-	<div class="border"></div>
-	<div id="root"></div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Rachel LaQuea Inc.</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="App">
+  <header class="App-header">
+    <img src="logo.svg" class="App-logo" alt="logo" />
+    <h1 class="text-white">Rachel LaQuea Inc.</h1>
+  </header>
+  <div id="root"></div>
   <form name="contact" netlify netlify-honeypot="bot-field" hidden>
     <input type="text" name="name" />
     <input type="email" name="email" />
     <textarea name="message"></textarea>
-  </form>	
+  </form>  
 <noscript>You need to enable JavaScript to run this app.</noscript>
   <script src="/src/App.js"></script>
   <script src="/src/data.js"></script>
   <script src="/src/index.js"></script>
   <script src="../src/index.js"></script>
+  <script src="script.js"></script>
 
-<iframe src="https://www.google.com/maps/embed/v1/place?q=Central+Florida,+FL,+USA&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="script.js"></script>
+
+<iframe src="https://www.google.com/maps/embed/v1/place?q=Central+Florida,+FL,+USA&key=rachels_key"></iframe>
 </body>
 </html>
-
-
