--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Rachel LaQuea Inc.</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="App">
   <header class="App-header">
@@ -18,16 +19,20 @@
     <input type="email" name="email" />
     <textarea name="message"></textarea>
   </form>  
-<noscript>You need to enable JavaScript to run this app.</noscript>
-  <script src="/src/App.js"></script>
-  <script src="/src/data.js"></script>
-  <script src="/src/index.js"></script>
-  <script src="../src/index.js"></script>
-  <script src="script.js"></script>
-
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  
+  <!-- External Libraries -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  
+  <!-- Your Scripts -->
+  <script src="src/App.js"></script>
+  <script src="src/data.js"></script>
+  <script src="src/index.js"></script>
   <script src="script.js"></script>
-
-<iframe src="https://www.google.com/maps/embed/v1/place?q=Central+Florida,+FL,+USA&key=rachels_key"></iframe>
+  <script src="about.js"></script>
+  
+  <!-- Google Maps Embed -->
+  <iframe src="https://www.google.com/maps/embed/v1/place?q=Central+Florida,+FL,+USA&key=rachels_key"></iframe>
 </body>
 </html>
