--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <title>Rachel LaQuea Inc.</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
+<!-- Include jQuery from CDN -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body class="App">
   <header class="App-header">
